2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(controller_recomm_track, recomm_track_thread):
	Use the recommend (share) method from the v2.0 API

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.c (rsp_init, +connected_cb, +disconnected_cb)
	(rsp_scrobbler_thread_scrobble, rsp_scrobbler_thread):
	Use love/ban methods from the v2.0 API.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(vgl_controller_class_init, check_session_thread):
	Make the session object parameter of the 'connected' signal.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c (-lastfm_set_radio)
	(-lastfm_session_copy, -lastfm_request_playlist):
	Remove unused methods from the legacy streaming API.

2009-04-23  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c (lastfm_session_new):
	Remove the 'subscriber' attribute from the legacy session object.

	* src/lastfm-ws.h
	* src/lastfm-ws.c
	(+lastfm_ws_session_get_v1_session, lastfm_ws_session_new)
	(lastfm_ws_session_unref, lastfm_ws_get_session):
	Create a legacy v1 session and include it in every v2 session
	object.

	* src/controller.c
	(-create_ws_session, check_session_thread, check_session)
	(start_playing_get_pls_thread, controller_start_playing_cb)
	(controller_disconnect, controller_tag_track)
	(controller_play_radio_by_url_thread, controller_run_app):
	Replace all LastfmSession objects with LastfmWsSession, as the
	former is now included in the latter.
	Use the v2.0 Last.fm API to stream music.

2009-04-22  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.h
	* src/lastfm-ws.c
	(+lastfm_ws_radio_tune, +lastfm_ws_radio_get_playlist):
	New methods for streaming radio using the v2.0 Last.fm API.

2009-04-22  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c
	(+parse_old_track_parts, +parse_new_track_parts)
	(lastfm_parse_track, lastfm_parse_playlist)