@@ -23,20 +23,6 @@ tag_track                               (const char           *user,
                                          GSList               *tags);
 
 gboolean
-love_ban_track                          (const char        *user,
-                                         const char        *password,
-                                         const LastfmTrack *track,
-                                         gboolean           love);
-
-gboolean
-recommend_track                         (const char           *user,
-                                         const char           *password,
-                                         const LastfmTrack    *track,
-                                         const char           *text,
-                                         LastfmTrackComponent  type,
-                                         const char           *rcpt);
-
-gboolean
 add_to_playlist                         (const char        *user,
                                          const char        *password,
                                          const LastfmTrack *track);
