@@ -1,5 +1,10 @@
 2009-04-23  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/xmlrpc.c (-recommend_track, -love_ban_track):
+	Remove deprecated methods to love, ban and recommend.
+
+2009-04-23  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/controller.c
 	(controller_recomm_track, recomm_track_thread):
 	Use the recommend (share) method from the v2.0 API
